; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_hasnonemptyout.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_hasnonemptyout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.state = type { %struct.arc* }
%struct.arc = type { i64, %struct.arc* }

@EMPTY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.state*)* @hasnonemptyout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hasnonemptyout(%struct.state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.state*, align 8
  %4 = alloca %struct.arc*, align 8
  store %struct.state* %0, %struct.state** %3, align 8
  %5 = load %struct.state*, %struct.state** %3, align 8
  %6 = getelementptr inbounds %struct.state, %struct.state* %5, i32 0, i32 0
  %7 = load %struct.arc*, %struct.arc** %6, align 8
  store %struct.arc* %7, %struct.arc** %4, align 8
  br label %8

8:                                                ; preds = %19, %1
  %9 = load %struct.arc*, %struct.arc** %4, align 8
  %10 = icmp ne %struct.arc* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %8
  %12 = load %struct.arc*, %struct.arc** %4, align 8
  %13 = getelementptr inbounds %struct.arc, %struct.arc* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @EMPTY, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %24

18:                                               ; preds = %11
  br label %19

19:                                               ; preds = %18
  %20 = load %struct.arc*, %struct.arc** %4, align 8
  %21 = getelementptr inbounds %struct.arc, %struct.arc* %20, i32 0, i32 1
  %22 = load %struct.arc*, %struct.arc** %21, align 8
  store %struct.arc* %22, %struct.arc** %4, align 8
  br label %8

23:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %17
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
